--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
 
     <!-- Jumbotron -->
     <section class="jumbotron text-center">
-      <img src="img/linux-logo.png" alt="linux-logo" width="200" class="rounded-circle img-thumbnail" />
+<!--       <img src="img/linux-logo.png" alt="linux-logo" width="200" class="rounded-circle img-thumbnail" /> -->
+      <img src="https://avatars.githubusercontent.com/u/45374438?s=60&v=4" alt="linux-logo" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4"><i class="bi bi-heart-fill text-danger"></i> Masrianto <i class="bi bi-heart-fill text-danger"></i></h1>
       <p class="lead"> Investor | Event Organizert <i class="bi bi-people-fill"></i></p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
