--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <!-- Jumbotron -->
     <section class="jumbotron text-center">
       <!--       <img src="img/linux-logo.png" alt="linux-logo" width="200" class="rounded-circle img-thumbnail" /> -->
-      <img src="/img/45374438.jpg" alt="linux-logo" width="200" class="rounded-circle img-thumbnail" />
+      <img src="/img/linux-logo.png" alt="linux-logo" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4"><i class="bi bi-heart-fill text-danger"></i> Masrianto <i class="bi bi-heart-fill text-danger"></i></h1>
       <p class="lead">Investor | Event Organizert <i class="bi bi-people-fill"></i></p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
