--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
 
     <!-- Jumbotron -->
     <section class="jumbotron text-center">
-      <!--       <img src="img/linux-logo.png" alt="linux-logo" width="200" class="rounded-circle img-thumbnail" /> -->
-      <img src="/img/linux-logo.png" alt="linux-logo" width="200" class="rounded-circle img-thumbnail" />
+      <img src="img/linux-logo.png" alt="linux-logo" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4"><i class="bi bi-heart-fill text-danger"></i> Masrianto <i class="bi bi-heart-fill text-danger"></i></h1>
       <p class="lead">Investor | Event Organizert <i class="bi bi-people-fill"></i></p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -165,6 +164,10 @@
         </div>
         <div class="row justify-content-center">
           <div class="col-md-6">
+            <div class="alert alert-success alert-dismissible fade show d-none" role="alert">
+              <strong>Terima kasih!</strong> Pesan anda sudah kami terima.
+              <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
             <form name="registrasi">
               <div class="form-group mb-3">
                 <label for="name">Nama Lengkap</label>
@@ -179,7 +182,12 @@
                 <textarea class="form-control" id="pesan" rows="3" name="pesan"></textarea>
               </div>
 
-              <button type="submit" class="btn btn-danger">Kirim</button>
+              <button type="submit" class="btn btn-primary btn-kirim">Kirim</button>
+
+              <button class="btn btn-primary btn-loading d-none" type="button" disabled>
+                <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                Loading...
+              </button>
             </form>
           </div>
         </div>
