--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         ></path>
       </svg>
       <script type="text/javascript" src="https://files.coinmarketcap.com/static/widget/coinPriceBlock.js"></script>
-      <div id="coinmarketcap-widget-coin-price-block" coins="1,1027,825,1839,74,2010,52,5994,7083" currency="IDR" theme="light" transparent="false" show-symbol-logo="true"></div>
+      <div id="coinmarketcap-widget-coin-price-block" coins="1,1027,825,1839,74,2010,52,5994,7083" currency="IDR" theme="light" transparent="true" show-symbol-logo="true"></div>
     </section>
     <!-- Projects End -->
 
