--- a/index.html
+++ b/index.html
@@ -151,7 +151,8 @@
           d="M0,32L40,58.7C80,85,160,139,240,149.3C320,160,400,128,480,112C560,96,640,96,720,128C800,160,880,224,960,256C1040,288,1120,288,1200,288C1280,288,1360,288,1400,288L1440,288L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"
         ></path>
       </svg>
-      <script type="text/javascript" src="https://files.coinmarketcap.com/static/widget/coinPriceBlock.js"></script><div id="coinmarketcap-widget-coin-price-block" coins="1,1027,825,1839,74,2010,52,5994,7083,4687,9020" currency="IDR" theme="light" transparent="false" show-symbol-logo="true"></div>
+      <script type="text/javascript" src="https://files.coinmarketcap.com/static/widget/coinPriceBlock.js"></script>
+      <div id="coinmarketcap-widget-coin-price-block" coins="1,74,2010,1027,825,1839,52,5994,7083,4687,9020" currency="IDR" theme="light" transparent="false" show-symbol-logo="true"></div>
     </section>
     <!-- Projects End -->
 
