--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <div class="card">
               <img src="img/projects/1.jpg" class="card-img-top" alt="projects1" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content. Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio perferendis ab non laudantium. Culpa repellendus dolore ullam corrupti beatae consequatur voluptas aspernatur assumenda. Placeat ullam, tempore necessitatibus molestias id voluptate?</p>
               </div>
             </div>
           </div>
